
linux-image (linux-3.2.54-mempo-0.1.22) UNRELEASED; urgency=low

  * updated to grsecurity-3.0-3.2.54-201401051649
  * fixed --build-id=none
  * checking for proper dpkg >= 1.17.5
  * fixed the gzip files fix to be applied on each step of overlay
  * fixed bug that created part of log in file named "1"
  * fixed gzip in more places in Makefile
  * LC_ALL="C"
  * using tar with --faketime and FAKETIME_TIME
  * removed kernel_debug  kernel_doc kernel_manual targets for now
  * require tar with also --sort-input
  * using DEB_BUILD_TIMESTAMP
  * (temp) use option --sort-input ""
  * use tar wrapper for our version of tar (was missing previously?)
  * v0.1.22-rc7
  * correct format in DEB_BUILD_TIMESTAMP
  * test for fixed tar version with --sort-input without empty arg
  * v0.1.22-rc8
  * same owner, group, numeric-id for tar
  * use local/bin/tar instead wrapper; using TAR_OPTIONS.
  * removed kernel sources info and fixed /etc/kernel checksum
  * refactored time handing (1 var in env.sh)

 -- mempo <mempo@mempo.org>  Sun, 12 Jan 2014 06:20:00 +0200

linux-image (linux-3.2.54-mempo-0.1.21) UNRELEASED; urgency=low

  * updated to linux 3.2.54 
  * updated to grsecurity-3.0-3.2.54-201401051649.patch
  * fixed kernel version name

 -- mempo <mempo@mempo.org>  Tue, 07 Jan 2014 14:00:00 +0200

linux-image (linux-3.2.53-mempo-0.1.20) UNRELEASED; urgency=low

  * using ccache when detected
  * fixed copy to ~/Downloads/ after wget
  * configured new config option
  * configure concurency level on make
  * overaly dir for debian to make gzip files deterministic
  * fix to changelog format

 -- mempo <mempo@mempo.org>  Fri, 04 Jan 2014 01:00:00 +0200

linux-image (linux-3.2.53-mempo-0.1.19) UNRELEASED; urgency=low

  * updated grsecurity-3.0-3.2.53-201312262018.patch

 -- mempo <mempo@mempo.org>  Fri, 03 Jan 2014 01:00:00 +0200