@@ -89,22 +89,42 @@ pwd_here=$PWD
 	export KBUILD_BUILD_USER=user
 	export KBUILD_BUILD_HOST=host
 	export ROOT_DEV=FLOPPY
+	export FAKETIME_TIME="$TIMESTAMP_RFC3339"
 
-	export TAR_OPTIONS="--faketime $TIMESTAMP_RFC3339 --sort-input --owner root --group root --numeric-owner" # tip: spaces in args values NOT allowed unless escaped
+#	export TAR_OPTIONS="--faketime $TIMESTAMP_RFC3339 --sort-input --owner root --group root --numeric-owner" # tip: spaces in args values NOT allowed unless escaped
+# ^--- tar options will be implemented as local wrapper script
 
-	# PATH="$HOME/.local/usr/lib/faketime-wrappers/:$PATH" # should be prepared by prepare-toolchain.sh
+	# should be prepared by prepare-toolchain.sh : 
+	export PATH="$HOME/.local/usr/bin/:$PATH" # first add the upgraded tar mempo-tar https://wiki.debian.org/Mempo/mempo-deb/tar that is probably installed locally 
+	export real_tar_binary=`which tar` # the real mempo-tar binary full path
+	export PATH="$PWD/../../../tools/wrapper:$PATH" # now add our wrapper so it is used instead of any other tar
 
-#	echo $overlay_dir
-#	echo $PWD
-#	echo "IN BASH"
-#	bash
-#	echo "DONE BASH"
 	echo "* Using CONCURRENCY_LEVEL=$CONCURRENCY_LEVEL"
 	echo "* Using PATH=$PATH"
 	echo "* Using overlay_dir=$overlay_dir"
-	echo "* Using TAR_OPTIONS=$TAR_OPTIONS"
+	echo "* Using FAKETIME_TIME=$FAKETIME_TIME"
 	echo "* DEB_BUILD_TIMESTAMP=$DEB_BUILD_TIMESTAMP"
 	echo "* TIMESTAMP_RFC3339=$TIMESTAMP_RFC3339"
+	echo "* real_tar_binary=$real_tar_binary"
+
+	echo ""
+	echo "--- TESTING TAR --- "
+	# (TODO: move outside, to prepare-toolchain.sh again)"
+	rm -f test1.tar ; rm -f test1 
+	touch test1 
+	tar -c -f test1.tar test1 --sort-input # test tar 
+	exitcode=$?
+	echo "tar exitcode=$exitcode"
+	rm -f test1.tar ; rm -f test1 
+	if [[ 0 != "$exitcode" ]]  ; then
+		echo "Error: you need special version of tar, search internet for 'mempo debian tar' for details"
+		# echo "see why - starting bash:"
+		# bash
+		exit 1
+	else
+		echo " * tar test passed"
+	fi
+
 
 	set -x
 	# kernel_debug  kernel_doc kernel_manual
